fix styles
Squashed commit of the following:

commit 469e449217a5410cba1c6149e4ca560ee6a64fff
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 1 21:06:16 2022 +0300

    update browserslist

commit 1645350eaf8b688764fef9dcb9afaf611b376b3d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 1 21:05:32 2022 +0300

    fix paddings for mobile

commit fd9589b153d717e89c48ac65972d0c248b79dff6
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 1 20:46:51 2022 +0300

    fix paddings for actions on mobile safari

commit dc5090a2e871d542c7439c7b4c6060115f748bfa
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 1 20:43:34 2022 +0300

    fix paddings for actions on mobile chrome

commit e4c5c10120d2c6339bf9d3f244901a1f750650b6
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 1 20:38:10 2022 +0300

    fix ReadmeBtn

commit f11145e694e2afe32f72fa5fd476bcebbc16d005
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 1 20:06:01 2022 +0300

    fix paddings for compatibility on desktop

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -145,7 +145,7 @@ header h3 {
 .test-info {
   background: url(../img/logo.png) left center no-repeat;
   background-size: 3.5vw;
-  padding-left: 5vw;
+  padding-left: 4.5vw;
   min-height: 4.5vw;
   display: flex;
   flex-direction: column;
@@ -226,9 +226,9 @@ header h3 {
   font-size: $compatibilitySize;
 }
 
-.compatibility > div {  
+.compatibility > div {
   background-size: 1vw;
-  padding-left: 1.5vw;
+  padding-left: 1.3vw;
 }
 
 .full-compatibility {
@@ -345,7 +345,7 @@ footer {
   }
   header h2 {
     font-size: 6vw;
-    margin: 0 0 5vw;
+    margin: 0 0 4vw;
   }
   header h3 {
     font-size: 5vw;
@@ -354,7 +354,7 @@ footer {
   .mission {
     font-size: 4vw;
     line-height: 5.5vw;
-    margin-top: 6vw;
+    margin-top: 4vw;
     padding: 0 3vw;
   }
   .instruction {
@@ -368,7 +368,7 @@ footer {
     position: relative;
     font-size: 3vw;
     line-height: 4vw;
-    margin-bottom: 3.5vw;
+    margin-bottom: 2vw;
   }
   .instruction ul {
     padding-left: 5vw;
@@ -408,7 +408,7 @@ footer {
   .test-title {
     font-size: 7vw;
     line-height: 8vw;
-    margin: 2vw 0 6vw;
+    margin: 2vw 0 4vw;
     background: none;
     background-size: 4vw;
     padding-left: 0;
@@ -422,10 +422,15 @@ footer {
     padding-left: 5.5vw;
     margin-bottom: 3vw;
   }
+  .compatibility > div {
+    background-size: 3vw;
+    padding-left: 4vw;
+    margin-bottom: 1vw;
+  }
   .btn {
     font-size: 4vw;
-    margin: 4vw 0 0 0;
-    padding: 7vw 0 0;
+    margin: 4vw 0 1vw 0;
+    padding: 10vw 0 0;
   }
   .startTest,
   .copyLink,
@@ -437,11 +442,10 @@ footer {
     width: 33%;
     text-align: center;
     float: left;
-    margin-bottom: 4vw;
   }
   .startTest,
   .subscribe {
-    padding-top: 8.8vw;
+    padding-top: 8.2vw;
   }
   .readmeText {
     font-size: 4vw;
@@ -489,7 +493,16 @@ footer {
     .readme {
       background-size: 6vw;
       width: 50%;
+    }
+
+    .startTest {
+      margin: 4vw 0 0 0;
+    }
+
+    .copyLink,
+    .copyRules,
+    .readme {
       margin: 4vw 0 5vw 0;
-    } 
+    }
   }
 }}
